fixed alignment of score and start button

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   background-image: url(assets/bg1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  font-family:'Saira' 'Montserrat' sans-serif;
 }
 
 audio {
@@ -25,14 +26,12 @@ audio {
 
 #start {
   display:block;
-  width:1rem;
-  height:0.6rem;
   text-align:center;
   position:relative;
   margin:0 auto;
-  font-size:1.4rem;
+  font-size:1.8rem;
   color: rgb(240,240,200);
-  padding-top:1rem;   
+  padding-top:0.6rem;   
 }
 
 #start:hover {
@@ -41,8 +40,8 @@ audio {
 
 #fail {
   display:block;
-  width:400px;
-  height:350px;
+  width:13rem;
+  height:2rem;
   text-align:center;
   position:relative;
   margin:0 auto;
@@ -68,33 +67,36 @@ audio {
 .keys {
   position: relative;
   display: inline-block;
-  width: 1rem;
-  height: 1rem;
-  line-height: 0;
-  border: 10rem solid;
+  width: 13rem;
+  height: 13rem;
+  border: 1.6rem solid;
   border-color: rgba(29, 140, 163, 0.8);
   border-bottom: none;
   border-right: none;
-  border-radius: 1rem;
+  border-radius: 3rem;
   margin: 0.2rem;
   margin-top: 2rem;
 }
 
 #count {
-  display:inline-block;
-  width:10px;
-  height:1rem;
-  text-align:center;
-  position:relative;
-  margin:0 auto;
-  font-size:1.8rem;
+  display: inline-block;
+  width: 10px;
+  height: 1rem;
+  text-align: center;
+  position: relative;
+  float: left;
+  font-size: 1.8rem;
   color: rgb(240,240,200);
-  padding-top:3rem;
+  padding-top: 1rem;
+  margin-bottom: 4rem;
 }
 
-#score {
+/*#score  {
+	width: 20rem;
+	margin-bottom: 4rem;
+}*/
 
-}
+
 
 
 
